# SmartTavern

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  DEVELOPMENT_NOTES.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  Start.bat  api-config.json  docker-compose.yml  pyproject.toml  start_all_apis.py
api/modules/SmartTavern/: __init__.py
api/modules/SmartTavern/assets_normalizer/: __init__.py  assets_normalizer.py  impl.py
api/modules/SmartTavern/chat_branches/: __init__.py  chat_branches.py  impl.py
api/modules/SmartTavern/data_catalog/: __init__.py  data_catalog.py  impl.py
api/modules/SmartTavern/data_import/: __init__.py  data_import.py  impl.py
api/modules/SmartTavern/framing_prompt/: __init__.py  framing_prompt.py  impl.py
api/modules/SmartTavern/image_binding/: __init__.py  image_binding.py  impl.py  variables.py
api/modules/SmartTavern/macro/: __init__.py  (+2 more)
api/modules/api_files/: __init__.py  api_files.py
api/modules/api_gateway/: __init__.py  api_gateway.py
api/modules/llm_api/: __init__.py  impl.py  llm_api.py  variables.py
api/modules/project_manager/: impl.py  project_manager.py
api/modules/web_server/: impl.py  web_server.py
api/plugins/SmartTavern/: __init__.py  hook_contracts.py  hook_manager.py  hook_metrics.py  plugin_loader.py
api/workflow/image_binding/: image_binding.py
backend_projects/ProjectManager/: modularflow_config.py  start_server.py
backend_projects/SmartTavern/: modularflow_config.py
backend_projects/SmartTavern/plugins/: README_BACKEND_HOOKS.md
core/: __init__.py  api_client.py  api_gateway.py  api_registry.py  errors.py  plugins_backend_loader.py  project_config_interface.py  project_config_manager.py  services.py
core/config/: api_config.py
docs/: prompt-engine-rfc.md
frontend_projects/ProjectManager/: index.html  modularflow_config.py
frontend_projects/ProjectManager/js/: api.js  main.js
frontend_projects/PromptEditor/: index.html  modularflow_config.py
frontend_projects/PromptEditor/src/: App.vue  main.ts
frontend_projects/SmartTavern/: .env  index.html  modularflow_config.py  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend_projects/SmartTavern/src/: App.vue  main.ts
orchestrators/: __init__.py  simple_workflow.py
scripts/: create_plugin.py  migrate_storage.py
shared/: __init__.py  atomic_write.py
shared/storage/: __init__.py  base.py  json_backend.py  schema.sql  sqlite_backend.py  test_contracts.py
(+210 files in other folders)
