[project]
name = "smarttavern"
version = "0.1.0"
description = "基于 ModularFlow Framework 的模块化 AI 聊天与角色扮演平台"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.1",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "pillow>=10.0.0",
    "psutil",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = ["pytest>=7.4.2", "ruff>=0.11", "pre-commit>=4.2"]

[project.scripts]
smarttavern = "start_all_apis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "orchestrators", "shared"]

[tool.hatch.build.targets.wheel.force-include]
"start_all_apis.py" = "start_all_apis.py"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["api", "core", "orchestrators", "shared", "backend_projects"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "E402", "B008", "B904", "B023", "SIM102", "SIM105", "SIM108", "RUF001", "RUF002", "RUF003", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["core", "api", "orchestrators", "shared"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
